# robotic

./: TODO.md  formulas.ipynb  pyproject.toml
.github/_workflows/: tests.yml
exams/: 2024_09_19.ipynb  midtemr_19-11-2021.ipynb  midterm_15-11-2023.ipynb  midterm_18-11-2022.ipynb  midterm_22-11-2024.ipynb  midterm_22-11-2024.py
formulas/: formulas.ipynb
midterms/: midterm_2020-11-20.ipynb  midterm_2021-11-19.ipynb  midterm_2022-11-18.ipynb
src/: __init__.py
src/robotic/: __init__.py  axis.py  manipulator.py  rotation.py  tempCodeRunnerFile.py  transformations.py  typing.py  utils.py
src/robotic/_transformations/: homogeneous.py  rotation.py  translation.py
src/robotic/transformations/: rotation.py  translation.py
tests/: test_axis.py  test_rotation.py
