[project]
name = "robotic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haislich", email = "josedlv936@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "sympy>=1.13.3",
]

[project.scripts]
robotic = "robotic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
