[project]
name = "robotic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "haislich", email = "josedlv936@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mpmath>=1.3.0",
    "mypy>=1.15.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pyqt6>=6.9.0",
    "pytest>=8.3.5",
    "sympy>=1.13.3",
]

[project.scripts]
robotic = "robotic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "pylint>=3.3.6",
    "ruff>=0.11.6",
]
